--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "framer-motion": "^12.0.6",
     "next": "15.1.6",
     "queenlens-photography": "file:",
     "react": "^19.0.0",
