--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "framer-motion": "^12.0.6",
     "lucide-react": "^0.474.0",
-    "next": "15.1.6",
+    "next": "^15.2.4",
     "queenlens-photography": "file:",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
