--- a/package.json
+++ b/package.json
@@ -9,14 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "framer-motion": "^12.0.6",
+    "framer-motion": "^12.6.2",
     "lucide-react": "^0.474.0",
     "next": "^15.2.4",
     "queenlens-photography": "file:",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
-    "react-responsive-masonry": "^2.7.1"
+    "react-responsive-masonry": "^2.7.1",
+    "react-scroll-parallax": "^3.4.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
