--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "dotenv": "^16.4.7",
     "framer-motion": "^12.6.2",
     "lucide-react": "^0.474.0",
+    "mongodb": "^6.15.0",
     "next": "^15.2.4",
     "queenlens-photography": "file:",
     "react": "^19.0.0",
