feat(api): add contact submission toggle endpoint and notifications API
- Implemented a PUT endpoint for toggling the read status of contact submissions.
- Created a notifications API with GET and POST methods for fetching and adding notifications.
- Added logic to limit the number of notifications stored in the database to 15.
- Developed a Notifications component to display notifications in the dashboard.
- Created a SoftwareVersion component to show application version details.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,6 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/lib/mongodb.js", "src/scripts/seed-admin.js", "src/app/api/contact-submissions/route.js", "src/lib/dbConnect.js", "src/app/api/admin/delete-user/route.js", "src/app/api/admin/get-users/route.js"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/lib/mongodb.js", "src/scripts/seed-admin.js", "src/app/api/contact-submissions/route.js", "src/lib/dbConnect.js", "src/app/api/admin/delete-user/route.js", "src/app/api/admin/get-users/route.js", "src/app/api/contact-submissions/toggle/[id]/route.js"],
   "exclude": ["node_modules"]
 }
