--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "queenlens-photography",
-  "version": "1.12.0",
+  "version": "1.12.2",
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
@@ -10,10 +10,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/express": "^5.0.1",
     "@types/jsonwebtoken": "^9.0.9",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.2",
     "dotenv": "^16.4.7",
+    "express": "^5.1.0",
     "framer-motion": "^12.6.2",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.474.0",
