--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mongoose": "^8.13.1",
     "next": "^15.2.4",
     "next-auth": "^4.24.11",
+    "next-seo": "^6.6.0",
     "nodemailer": "^6.10.0",
     "queenlens-photography": "file:",
     "react": "^19.0.0",
