--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "next": "^15.2.4",
     "next-auth": "^4.24.11",
     "next-seo": "^6.6.0",
+    "next-sitemap": "^4.2.3",
     "nodemailer": "^6.10.0",
     "queenlens-photography": "file:",
     "react": "^19.0.0",
